fix: fix bullet to avoid scroll gap in the bottom

--- a/fun-chat/src/app/components/contacts/user-list/user-list.module.css
+++ b/fun-chat/src/app/components/contacts/user-list/user-list.module.css
@@ -1,7 +1,7 @@
 .list {
   overflow-y: scroll;
 
-  max-height: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
 
@@ -10,7 +10,7 @@
 
 .user {
   position: relative;
-  padding-left: 1.2em;
+  padding-left: 1.5em;
 }
 
 .user:hover {
@@ -19,14 +19,12 @@
 }
 
 .user::before {
-  content: '•';
+  content: '●';
 
   position: absolute;
-  top: 60%;
-  left: 0.1em;
-  transform: translateY(-60%);
+  bottom: 0.05em;
+  left: 0.35em;
 
-  font-size: 2rem;
   color: var(--invalid);
 }
 
